2009-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Fix for GTK# 2.8.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs:
	  Moved the workaround for "Bug 492264 - Intellisense menu
	  locks on top of the screen" to WindowTransparencyDecorator,
	  so no need to do it here too.

2009-05-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Changed
	  default for completewithpunctuation

2009-05-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs:
	  Fixed "Bug 492264 - Intellisense menu locks on top of the
	  screen".

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Better set of modifiers for closing completion window on
	  arrow+modifier.

2009-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/StartupOptionsPanel.cs:
	  Fixed possible cast exception.

2009-04-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Restore
	  behaviour of not closing the list on punctuation when it
	  matches an item in the list.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/DeclarationViewWindow.cs:
	  Added missing translation string.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/ProjectsGuiServices.cs:
	  Reimplemented language binding service.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Projects.Gui.addin.xml: Changed copyright tag.

2009-04-20  Mike Krüger  <mkrueger@novell.com>
